--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      USER_NAME: "GitHubUser"
+      user_name: "GitHubUser"
 
     steps:
       - name: Checkout code
